# EdgeDetectionApp

./: README.md
app/: CMakeLists.txt  build.gradle
